--- a/templates/cadvisor/workloads/cadvisor/overlays/cadvisor-args.yaml.j2
+++ b/templates/cadvisor/workloads/cadvisor/overlays/cadvisor-args.yaml.j2
@@ -18,11 +18,12 @@ spec:
         - name: cadvisor
           args:
             # https://github.com/google/cadvisor/blob/master/docs/runtime_options.md
-            - --housekeeping_interval=10s                           # kubernetes default args
-            - --max_housekeeping_interval=15s
+            - --housekeeping_interval=15s
+            - --max_housekeeping_interval=25s
             - --event_storage_event_limit=default=0
             - --event_storage_age_limit=default=0
+            - --disable_metrics=advtcp,cpuset,memory_numa,percpu,sched,tcp,udp,disk,diskIO,accelerator,hugetlb,referenced_memory,cpu_topology,resctrl
             - --enable_metrics=app,cpu,disk,diskIO,memory,network,process
-            #- --docker_only                                         # only show stats for docker containers
+            - --docker_only                                         # only show stats for docker containers
             - --store_container_labels=false
             - --whitelisted_container_labels=io.kubernetes.container.name,io.kubernetes.pod.name,io.kubernetes.pod.namespace
