--- a/templates/upgrade-controller/workloads/upgrade-controller/k3s-worker-plan.yaml.j2
+++ b/templates/upgrade-controller/workloads/upgrade-controller/k3s-worker-plan.yaml.j2
@@ -10,6 +10,7 @@ spec:
   concurrency: 1 # Batch size (roughly maps to maximum number of unschedulable nodes)
   # renovate: datasource=github-releases depName=k3s-io/k3s
   version: "{{k3s_install_version|default('v1.23.5+k3s1')}}"
+  # channel: https://update.k3s.io/v1-release/channels/stable
   # channel: https://update.k3s.io/v1-release/channels/v1.23
   nodeSelector:
     matchExpressions:
