--- a/templates/kube-vip/workloads/kube-vip/base/application/daemonset.yaml.j2
+++ b/templates/kube-vip/workloads/kube-vip/base/application/daemonset.yaml.j2
@@ -8,6 +8,7 @@ metadata:
   name: kube-vip-ds
   namespace: kube-system
 spec:
+  revisionHistoryLimit: 3
   selector:
     matchLabels:
       app.kubernetes.io/name: kube-vip-ds
