Updated per llnter

--- a/templates/user-files/sealed-secrets/sealed-secrets-priv-key.yaml.j2
+++ b/templates/user-files/sealed-secrets/sealed-secrets-priv-key.yaml.j2
@@ -3,12 +3,12 @@ apiVersion: v1
 kind: Secret
 type: kubernetes.io/tls
 metadata:
-  name: {{sealed_secrets.use_pre_generated_private_key_name}}
-  namespace: {{install.sealed_secrets.namespace}}
+  name: {{ sealed_secrets.use_pre_generated_private_key_name }}
+  namespace: {{ install.sealed_secrets.namespace }}
   labels:
-    {{sealed_secrets.use_pre_generated_private_key_label}}
+    {{ sealed_secrets.use_pre_generated_private_key_labe l}}
 stringData:
   tls.crt: |
-    {% filter indent(width=4) %}{{SEALED_SECRETS_PRIVATE_CERT_SECRET}}{% endfilter %}
+    {% filter indent(width=4) %}{{ SEALED_SECRETS_PRIVATE_CERT_SECRET }}{% endfilter %}
   tls.key: |
-    {% filter indent(width=4) %}{{SEALED_SECRETS_PRIVATE_KEY_SECRET}}{% endfilter %}
+    {% filter indent(width=4) %}{{ SEALED_SECRETS_PRIVATE_KEY_SECRET }}{% endfilter %}
